Fix polish version

--- a/Tulip/index-pl.html
+++ b/Tulip/index-pl.html
@@ -41,10 +41,10 @@
               <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav mx-auto">
                   <li class="nav-item">
-                    <a id="nav-description" class="nav-link" href="#description" onclick="scrollToContent(event, 'description')">Opis</a>
+                    <a id="nav-description" class="nav-link" href="#description" onclick="scrollToContent(event, 'description')">Obiekt</a>
                   </li>
                   <li class="nav-item">
-                    <a id="nav-rooms" class="nav-link" href="#rooms" onclick="scrollToContent(event, 'rooms')">Pokoje</a>
+                    <a id="nav-rooms" class="nav-link" href="#rooms" onclick="scrollToContent(event, 'rooms')">Apartamenty</a>
                   </li>
                   <li class="nav-item">
                     <a id="nav-meals" class="nav-link" href="#meals" onclick="scrollToContent(event, 'meals')">Bufet śniadaniowy</a>
@@ -76,7 +76,7 @@
     <main>
         <section>
             <div id="description" class="container mb-2 image-wrapper">
-                <h2 class="pt-3 pb-1 shadows-into-light-regular">Opis</h2>
+                <h2 class="pt-3 pb-1 shadows-into-light-regular">Obiekt</h2>
                 <div class="row bg-blue-light p-md-4 p-3 g-2">
                     <div class="col-md-8">
                         <img src="img/tulip2.jpg" alt="Large Image" class="large-image">
@@ -89,7 +89,7 @@
                     </div>
 
                     <div class="col-12 mt-3">
-                        <p>Hotel jest oddalony od plaży ok. 5 minut. Apartamenty oferują komfort, którego Państwo potrzebujecie; przestronne pokoje z odrębnymi sypialniami, aneks kuchenny, łazienkę i balkon.</p>
+                        <p>Obiekt hotelowy jest oddalony od plaży ok. 5 minut. Apartamenty oferują komfort, którego Państwo potrzebujecie; przestronne pokoje z odrębnymi sypialniami, aneks kuchenny, łazienkę i balkon.</p>
 
                         <p>W restauracji możecie Państwo rozpocząć udany dzień korzystając z bogatego bufetu śniadaniowego, a wieczór spędzić przy doskonałych potrawach w naszej restauracji. Zrelaksują się Państwo w strefie SPA, wyposażonej w nowoczesne pokoje zabiegowe z urządzeniami do terapii upiększających i masażu, suchą i parową saunę oraz basen i wannę z hydromasażem. Parking dla pojazdów gości znajduje się przed hotelem lub w garażu podziemnym.</p>
                     </div>
