--- a/Tulip/index-pl-new.html
+++ b/Tulip/index-pl-new.html
@@ -76,7 +76,7 @@
     <main>
         <section>
             <div id="description" class="container mb-2 image-wrapper">
-                <h2 class="pt-3 pb-1 shadows-into-light-regular">Beschreibung</h2>
+                <h2 class="pt-3 pb-1 shadows-into-light-regular">Obiekt</h2>
                 <div class="row bg-blue-light p-md-4 p-3 g-2">
                     <div class="col-lg-8">
                         <img src="img/tulip2.jpg" alt="Large Image" class="large-image">
@@ -101,7 +101,7 @@
 
                     <div class="col-md-4">
                         <div class="col-12 bg-blue-subtle info d-flex align-items-center justify-content-center">
-                            <p>Psy mogą przebywać w hotelu za dodatkową opłatą</p>
+                            <p class="text-center">Psy mogą przebywać w hotelu za dodatkową opłatą</p>
                         </div>
                     </div>
                 
