--- a/Tulip/index-de.html
+++ b/Tulip/index-de.html
@@ -325,11 +325,11 @@
                             <li>
                                 <p class="mb-0">
                                     <span class="label">E-Mail-Adresse:</span>
-                                    <a href="mailto:ostseeurlaub-syld-haria-apartments@gmx.net">ostseeurlaub-syld-haria-apartments@gmx.net</a>
+                                    <a class="link" href="mailto:ostseeurlaub-syld-haria-apartments@gmx.net">ostseeurlaub-syld-haria-apartments@gmx.net</a>
                                 </p>
                                 <p class="mb-0">
                                     <span class="label invisible-label">E-Mail-Adresse:</span>
-                                    <a href="mailto:info-hs-baltictour@web.de">info-hs-baltictour@web.de</a>
+                                    <a class="link" href="mailto:info-hs-baltictour@web.de">info-hs-baltictour@web.de</a>
                                 </p>
                             </li>
                         </ul>
@@ -354,7 +354,7 @@
                         <p><strong>Haftung für Links:</strong> Unser Angebot enthält Links zu externen Websites Dritter, auf deren Inhalte wir keinen Einfluss haben. Deshalb können wir für diese fremden Inhalte auch keine Gewähr übernehmen. Für die Inhalte der verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich.</p>
 
                         <h5>Datenschutz</h5>
-                        <p>Informationen zum Datenschutz finden Sie in unserer <a href="/datenschutz">Datenschutzerklärung</a>.</p>
+                        <p>Informationen zum Datenschutz finden Sie in unserer <a  class="link" href="/policy.html">Datenschutzerklärung</a>.</p>
                     </div>
                 </div>
     
