--- a/Tulip/index-pl-new.html
+++ b/Tulip/index-pl-new.html
@@ -30,7 +30,7 @@
 
             <!-- Flaga -->
             <a href="index-de.html" class="polish-flag-link">
-                <img src="img/de-flag.png" alt="Niemiecka wersja" class="deutch-flag">
+                <img src="img/de-flag.png" alt="Niemiecka wersja" class="polish-flag">
             </a>
         </div>
         <nav class="navbar navbar-expand-md navbar-dark bg-blue">   
@@ -326,11 +326,11 @@
                             <li>
                                 <p class="mb-0">
                                     <span class="label">E-mail:</span>
-                                    <a href="mailto:ostseeurlaub-syld-haria-apartments@gmx.net">ostseeurlaub-syld-haria-apartments@gmx.net</a>
+                                    <a  class="link" href="mailto:ostseeurlaub-syld-haria-apartments@gmx.net">ostseeurlaub-syld-haria-apartments@gmx.net</a>
                                 </p>
                                 <p class="mb-0">
                                     <span class="label invisible-label">E-mail:</span>
-                                    <a href="mailto:info-hs-baltictour@web.de">info-hs-baltictour@web.de</a>
+                                    <a  class="link" href="mailto:info-hs-baltictour@web.de">info-hs-baltictour@web.de</a>
                                 </p>
                             </li>
                         </ul>
@@ -351,13 +351,8 @@
 
                 <div class="row mx-5 p-3">
                     <div class="col-lg-11 offset-lg-1">
-                        <h5>Haftungsausschluss</h5>
-                        <p><strong>Haftung für Inhalte:</strong> Die Inhalte unserer Seiten wurden mit größter Sorgfalt erstellt. Für die Richtigkeit, Vollständigkeit und Aktualität der Inhalte können wir jedoch keine Gewähr übernehmen. Als Diensteanbieter sind wir gemäß § 7 Abs.1 TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich.</p>
-                        
-                        <p><strong>Haftung für Links:</strong> Unser Angebot enthält Links zu externen Websites Dritter, auf deren Inhalte wir keinen Einfluss haben. Deshalb können wir für diese fremden Inhalte auch keine Gewähr übernehmen. Für die Inhalte der verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich.</p>
-
-                        <h5>Datenschutz</h5>
-                        <p>Informationen zum Datenschutz finden Sie in unserer <a href="/datenschutz">Datenschutzerklärung</a>.</p>
+                        <h5>Ochrona danych osobowych</h5>
+                        <p>Informacje dot. przetwarzania danych osobowych znajdują się <a class="link" href="/policy.html">tutaj</a>.</p>
                     </div>
                 </div>
     
