--- a/Tulip/index-de.html
+++ b/Tulip/index-de.html
@@ -25,7 +25,7 @@
     <header class="fixed-top bg-white shadow" style="z-index: 1030;">
         <!-- logo-div -->
         <div class="container-fluid bg-blue-light logo-div position-relative">
-            <img class="img-fluid logo" src="img/logo.png" alt="">
+            <a href="index-de.html"><img class="img-fluid logo" src="img/logo.png" alt=""></a>
             <p class="shadows-into-light-regular">Ferienwohnungen in Misdroy</p>
 
             <!-- Flaga -->
@@ -354,7 +354,7 @@
                         <p><strong>Haftung für Links:</strong> Unser Angebot enthält Links zu externen Websites Dritter, auf deren Inhalte wir keinen Einfluss haben. Deshalb können wir für diese fremden Inhalte auch keine Gewähr übernehmen. Für die Inhalte der verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich.</p>
 
                         <h5>Datenschutz</h5>
-                        <p>Informationen zum Datenschutz finden Sie in unserer <a  class="link" href="/policy.html">Datenschutzerklärung</a>.</p>
+                        <p>Informationen zum Datenschutz finden Sie in unserer <a  class="link" href="policy.html">Datenschutzerklärung</a>.</p>
                     </div>
                 </div>
     
