--- a/Tulip/index-pl-new.html
+++ b/Tulip/index-pl-new.html
@@ -25,7 +25,7 @@
     <header class="fixed-top bg-white shadow" style="z-index: 1030;">
         <!-- logo-div -->
         <div class="container-fluid bg-blue-light logo-div position-relative">
-            <img class="img-fluid logo" src="img/logo.png" alt="">
+            <a href="index-de.html"><img class="img-fluid logo" src="img/logo.png" alt=""></a>
             <p class="shadows-into-light-regular">Ferienwohnungen in Misdroy</p>
 
             <!-- Flaga -->
@@ -352,7 +352,7 @@
                 <div class="row mx-5 p-3">
                     <div class="col-lg-11 offset-lg-1">
                         <h5>Ochrona danych osobowych</h5>
-                        <p>Informacje dot. przetwarzania danych osobowych znajdują się <a class="link" href="/policy.html">tutaj</a>.</p>
+                        <p>Informacje dot. przetwarzania danych osobowych znajdują się <a class="link" href="policy.html">tutaj</a>.</p>
                     </div>
                 </div>
     
