--- a/Tulip/policy.html
+++ b/Tulip/policy.html
@@ -32,7 +32,7 @@
 
     <main>
         <section>
-            <div id="policy-pl" class="container my-2 image-wrapper">
+            <div id="policy" class="container my-2">
                 <h2 class="shadows-into-light-regular">Polityka Prywatności</h2>
                 <div class="row bg-blue-light p-md-4 p-3">
                     <p>Polityka prywatności opisuje zasady przetwarzania przez nas informacji na Twój temat, w tym danych osobowych oraz ciasteczek, czyli tzw. cookies.</p>
